--- a/자리표.html
+++ b/자리표.html
@@ -67,46 +67,46 @@
         <div class="row">
             <div class="seat">1-1</div>
             <div class="seat">1-2</div>
-            <div class="seat">1-3</div>
-            <div class="seat">1-4</div>
+            <div class="seat">김영경</div>
+            <div class="seat">배수빈</div>
             <div class="aisle"></div>
-            <div class="seat">1-5</div>
-            <div class="seat">1-6</div>
-            <div class="seat">1-7</div>
+            <div class="seat">권민창</div>
+            <div class="seat">이민우</div>
+            <div class="seat">이재현</div>
             <div class="seat">1-8</div>
         </div>
         <div class="row">
-            <div class="seat">2-1</div>
-            <div class="seat">2-2</div>
-            <div class="seat">2-3</div>
-            <div class="seat">2-4</div>
+            <div class="seat">이주원</div>
+            <div class="seat">최명준(95)</div>
+            <div class="seat">차정민</div>
+            <div class="seat">김선혜</div>
             <div class="aisle"></div>
-            <div class="seat">2-5</div>
+            <div class="seat">백진우</div>
             <div class="seat">2-6</div>
-            <div class="seat">2-7</div>
-            <div class="seat">2-8</div>
+            <div class="seat">한상훈</div>
+            <div class="seat">최석현</div>
         </div>
         <div class="row">
-            <div class="seat">3-1</div>
-            <div class="seat">3-2</div>
-            <div class="seat">3-3</div>
-            <div class="seat">3-4</div>
+            <div class="seat">정현영</div>
+            <div class="seat">박소율</div>
+            <div class="seat">최명준(94)</div>
+            <div class="seat">김시욱</div>
             <div class="aisle"></div>
-            <div class="seat">3-5</div>
-            <div class="seat">3-6</div>
-            <div class="seat">3-7</div>
-            <div class="seat">3-8</div>
+            <div class="seat">백다인</div>
+            <div class="seat">정영훈</div>
+            <div class="seat">홍문일</div>
+            <div class="seat">박명환</div>
         </div>
         <div class="row">
             <div class="seat">4-1</div>
-            <div class="seat">4-2</div>
+            <div class="seat">김신</div>
             <div class="seat">X</div>
             <div class="seat">X</div>
             <div class="aisle"></div>
-            <div class="seat">4-5</div>
+            <div class="seat">김수환</div>
             <div class="seat">4-6</div>
-            <div class="seat">4-7</div>
-            <div class="seat">4-8</div>
+            <div class="seat">백도은</div>
+            <div class="seat">안하령</div>
         </div>
     </div>
 </body>
